# RTOS_Repo

Project_0_BlankProject/: CMakeLists.txt
Project_1.5_Basic_LED_Blink/: CMakeLists.txt  sdkconfig  sdkconfig.old
Project_1_LED_Basic/: CMakeLists.txt  sdkconfig
Project_1_LED_Basic/main/: blink_example_main.c
Project_2_LED_with_Button/: CMakeLists.txt
Project_2_LED_with_Button/main/: blink_example_main.c
Project_3_Basic_Multicolor_LED/: CMakeLists.txt  sdkconfig
Project_3_Basic_Multicolor_LED/main/: CMakeLists.txt  blink_example_main.c  rgb_led.c  rgb_led.h
Project_4_Basic_Multicolor_LED_with_Library/: CMakeLists.txt
Project_4_Basic_Multicolor_LED_with_Library/main/: CMakeLists.txt  ledc_basic_example_main.c  rgb_led.c  rgb_led.h
Project_5_PWM_with_Temperature_Sensor_and_LED_RGB/: CMakeLists.txt  sdkconfig
Project_5_PWM_with_Temperature_Sensor_and_LED_RGB/main/: CMakeLists.txt  ledc_basic_example_main.c  ntc_sensor.c  ntc_sensor.h  potentiometer.c  potentiometer.h  rgb_led.c  rgb_led.h
Project_5_Potentiometer_with_temperature_sensor_LED_RGB/: CMakeLists.txt  README.md
Project_5_Potentiometer_with_temperature_sensor_LED_RGB/main/: CMakeLists.txt  main.c  ntc.c  ntc.h  ntc_sensor.c  ntc_sensor.h  potentiometer.c  potentiometer.h  rgb_led.c  rgb_led.h
